======================================================================
                     --- Text-TabularDisplay ---
======================================================================

2002-10-28 15:14  dlc

	* README (1.6): Version updates.

2002-10-25 00:10  dlc

	* README (1.5): Updated.

2002-10-25 00:10  dlc

	* Changes (1.11): Automatically generated by cvs2cl.pl for
	dlc@tumbleweed

2002-10-25 00:10  dlc

	* Makefile.PL (1.5): Using DISTVNAME and SUFFIX.

2002-10-25 00:10  dlc

	* MANIFEST (1.7): Added another example: tdisplay

2002-10-25 00:08  dlc

	* examples/mysql.pl (1.3): Added optional addition of
	MySQL::Config.	Changed username references to user, so that the
	defaults in my.cnf could be used.

2002-10-24 23:56  dlc

	* examples/tdisplay (1.2): Hey, this is actually kind of useful. 
	Should this be one of the examples, or should it be an actual part
	of the package?

2002-10-24 23:29  dlc

	* examples/tdisplay (1.1): Command-line script to display stuff as
	tables.

2002-10-24 18:26  dlc

	* t/13.t (1.2): Updated test.

2002-10-24 18:26  dlc

	* TabularDisplay.pm (1.18): Added _SIZE.  Does The Right Thing for
	cases where the number of elements in the header is changed after
	data is added.	See t/13.t for more details, and an example of what
	this actually means.

2002-10-24 17:48  dlc

	* README (1.4): Up-to-date README.

2002-10-24 17:42  dlc

	* Changes (1.10): Automatically generated by cvs2cl.pl for
	dlc@tumbleweed

2002-10-24 17:40  dlc

	* t/14.t (1.1): Test for populate().

2002-10-24 17:40  dlc

	* examples/dump-passwd.pl (1.2): Removed alignment characters (no
	longer applicable), and simplified the program a lot.

2002-10-24 17:31  dlc

	* MANIFEST (1.6): Added another test.

2002-10-24 17:31  dlc

	* TabularDisplay.pm (1.17): Added paginate() method.

2002-10-16 07:04  dlc

	* TabularDisplay.pm (1.16): populate unintentionally ate the array
	it was passed; fixed.  Added items method, which returns the number