@@ -21,3 +21,5 @@ t/12.t
 t/13.t
 t/14.t
 TabularDisplay.pm
+SIGNATURE
+META.yml                                 Module meta-data (added by MakeMaker)
