@@ -1,0 +1,11 @@
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Text-TabularDisplay
+version:      1.19
+version_from: TabularDisplay.pm
+installdirs:  site
+requires:
+    IO::File:                      
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
