@@ -1,0 +1,47 @@
+This file contains message digests of all files listed in MANIFEST,
+signed via the Module::Signature module, version 0.38.
+
+To verify the content in this distribution, first make sure you have
+Module::Signature installed, then type:
+
+    % cpansign -v
+
+It would check each file's integrity, as well as the signature's
+validity.  If "==> Signature verified OK! <==" is not displayed,
+the distribution may already have been compromised, and you should
+not run its Makefile.PL or Build.PL.
+
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+SHA1 e75743a3cec080ff2373e3a3d8078c388b7f006c Changes
+SHA1 51c599b3e81abceae9fa2c77ce41abf9acf0270e MANIFEST
+SHA1 955e64271dd4f9983792918290268b63138c885e META.yml
+SHA1 ba8a5ba85c935cbbc0fb38c1f3ed52ba6f64d22f Makefile.PL
+SHA1 29ee8fdfc61b4d528f1d42760d70fde8fb9f1449 README
+SHA1 cfaecdda49b3d152055e067fcbfd810dc79ace9e TabularDisplay.pm
+SHA1 525fd7ab95ed8eaac68e5748e9490b6491088b43 examples/aliases
+SHA1 bdedfae939f401c15575b17ec0b4cffe66cda546 examples/dump-passwd.pl
+SHA1 b1ad3c0cfe0c64ce014091d0a529feac0f167a6e examples/mysql.pl
+SHA1 3dd89081594f2223bce84b4788641269ec390920 examples/tdisplay
+SHA1 ffebf72a2fad1c8cb2f298e53dc3f67d5f444617 t/01.t
+SHA1 f4a668903e0db05f5a5a8febcb9bdf1ff2c63f68 t/02.t
+SHA1 60369d0f21fab3b69f8e41636410ae977ed9f467 t/03.t
+SHA1 5841ea34a1dca5691f698dcfdf1cc00c60d1dc2b t/04.t
+SHA1 70efaeb3539a35b4267c3ac7ffafbcc2c37a10cc t/05.t
+SHA1 0343184a177800530e50a5b8198d962c689e9e02 t/06.t
+SHA1 30a9ae76ec32ab640467444d06263f8ea275c76e t/07.t
+SHA1 18f6face8cff1ea54b41939b23093c71a191d392 t/08.t
+SHA1 ec0336a64a65463b6cbd5e7a843e69f5a15ff9c6 t/09.t
+SHA1 5e89d4c984b653cfd50bcad793773458597f6e8f t/10.t
+SHA1 607d0a3c9c5576aa50aaed378aa043e6959648ce t/11.t
+SHA1 45aa5baa4177ffce05f3a9704eb76f83a9da0a95 t/12.t
+SHA1 02bd5df3f87dc45543abc034aadd79493a6c210d t/13.t
+SHA1 f7a8aab645dc4e5dc05d2928ef7c2e5e53dc66fa t/14.t
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.2.6 (GNU/Linux)
+
+iD8DBQFBUCqmzsinjrVhZaoRAmmXAJ0bSrueW4EWdyDrvurYCUoTO2MwkQCgmveh
+/QqXjMXkW6cUZnDT+/R0g5U=
+=tBx6
+-----END PGP SIGNATURE-----
